--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ subprojects {
 
     group = 'com.asakusafw.retz'
     // Note: You can't create RPM with hyphen included in version name
-    version = '0.0.9-SNAPSHOT'
+    version = '0.0.9'
     sourceCompatibility = '1.8'
     targetCompatibility = '1.8'
     repositories {
