--- a/build.gradle
+++ b/build.gradle
@@ -315,5 +315,6 @@ project('retz-inttest') {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.14.1'
+    gradleVersion = '3.0'
+    distributionUrl = distributionUrl.replace("bin", "all")
 }
