--- a/build.gradle
+++ b/build.gradle
@@ -134,6 +134,9 @@ project(':retz-server') {
         compile 'com.sparkjava:spark-core:2.3'
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.7.4'
 
+       	compile group: 'org.apache.curator', name: 'curator-framework', version: '2.8.0'
+       	compile group: 'org.apache.curator', name: 'curator-recipes', version: '2.8.0'
+
         testCompile project(":retz-client")
     }
 
