Add AWS-like authentication to client-server protocol
* Currently 'watch' protocol does not use authentication; Charlie may watch
  all event flows
* Only for single pair of a key and a secret - multiple users are to be done
* Add HMac-SHA1 authentication classes
* When authentication is enabled, clients will generate a signature from HTTP headers
* Server will check Authorization header before processing requests
* But /ping and /status are exception; to check server liveness
* Introduce ClientBuilder to keep client codes clean
* All Client constructors made protected

--- a/retz-client/src/test/resources/retz.properties
+++ b/retz-client/src/test/resources/retz.properties
@@ -18,8 +18,10 @@
 retz.mesos = 192.168.100.128:5050
 retz.bind  = http://localhost:9090
 retz.queue.max = 65536
-retz.key = deadbeef
-retz.secret = cafebabe
+retz.authentication = true
+retz.access.key = deadbeef
+retz.access.secret = cafebabe
 retz.schedule.results = file://path/to/dir/
 retz.schedule.retry = 5
 retz.user = kuenishi
+
