--- a/retz-common/src/test/resources/retz.properties
+++ b/retz-common/src/test/resources/retz.properties
@@ -17,6 +17,9 @@
 
 retz.mesos = 123.23.43.356:23563
 retz.bind = https://234.34.34.2:23452
+retz.authentication = true
+retz.access.key = cafebabe
+retz.access.secret = deadbeef
 retz.tls.keystore.file = path/to/keystore.jsk
 retz.tls.keystore.pass = foobar
 retz.tls.insecure = true
