--- a/retz-inttest/src/test/resources/retz.properties
+++ b/retz-inttest/src/test/resources/retz.properties
@@ -18,7 +18,8 @@
 retz.mesos = 127.0.0.1:15050
 retz.bind  = http://127.0.0.1:19090
 retz.queue.max = 65536
-retz.key = deadbeef
-retz.secret = cafebabe
+retz.authentication = true
+retz.access.key = deadbeef
+retz.access.secret = cafebabe
 retz.schedule.results = file://path/to/dir/
 retz.schedule.retry = 5
