--- a/retz-server/src/test/resources/retz-tls.properties
+++ b/retz-server/src/test/resources/retz-tls.properties
@@ -19,10 +19,11 @@ retz.mesos = localhost:5050
 retz.mesos.principal = retz
 retz.bind  = https://localhost:9091
 retz.queue.max = 65536
-retz.key = deadbeef
-retz.secret = cafebabe
 retz.schedule.results = file://path/to/dir/
 retz.schedule.retry = 5
 retz.tls.keystore.file = src/test/resources/retz-dev.jks
 retz.tls.keystore.pass = retz-dev
 retz.tls.insecure = true
+retz.authentication = true
+retz.access.key = deadbeef
+retz.access.secret = cafebabe
