--- a/retz-server/src/test/resources/retz.properties
+++ b/retz-server/src/test/resources/retz.properties
@@ -19,7 +19,9 @@ retz.mesos = localhost:5050
 retz.mesos.principal = retz
 retz.bind  = http://localhost:9090
 retz.queue.max = 65536
-retz.key = deadbeef
-retz.secret = cafebabe
+retz.authentication = true
+retz.access.key = deadbeef
+retz.access.secret = cafebabe
 retz.schedule.results = file://path/to/dir/
 retz.schedule.retry = 5
+
