--- a/build.gradle
+++ b/build.gradle
@@ -180,7 +180,9 @@ project(':retz-server') {
         }
     }
 
-    mainClassName = 'io.github.retz.scheduler.MesosFrameworkLauncher'
+//    mainClassName = 'io.github.retz.scheduler.MesosFrameworkLauncher'
+    mainClassName = 'io.github.retz.scheduler.CuratorClient'
+
 
     shadowJar {
         dependsOn 'copyExecutorJar'
