--- a/retz.properties
+++ b/retz.properties
@@ -6,3 +6,4 @@ retz.key = deadbeef
 retz.secret = cafebabe
 retz.schedule.results = /home/naofumi/work/retz/server/schedule_results
 retz.schedule.retry = 5
+retz.zk.servers = localhost:2180
