Fix typo, add test and notes

--- a/retz-common/src/test/resources/retz.properties
+++ b/retz-common/src/test/resources/retz.properties
@@ -20,6 +20,7 @@ retz.bind = https://234.34.34.2:23452
 retz.authentication = true
 retz.access.key = cafebabe
 retz.access.secret = deadbeef
+retz.executor.java = /cast/away/somewhere/java
 retz.tls.keystore.file = path/to/keystore.jsk
 retz.tls.keystore.pass = foobar
 retz.tls.insecure = true
