--- a/retz-server/src/test/resources/retz-tls.properties
+++ b/retz-server/src/test/resources/retz-tls.properties
@@ -24,6 +24,7 @@ retz.schedule.retry = 5
 retz.tls.keystore.file = src/test/resources/retz-dev.jks
 retz.tls.keystore.pass = retz-dev
 retz.tls.insecure = true
+retz.max.stock = 0
 retz.authentication = true
 retz.access.key = deadbeef
 retz.access.secret = cafebabe
