--- a/retz-server/src/test/resources/retz.properties
+++ b/retz-server/src/test/resources/retz.properties
@@ -20,6 +20,7 @@ retz.mesos.principal = retz
 retz.bind  = http://localhost:9090
 retz.queue.max = 65536
 retz.authentication = true
+retz.max.stock = 0
 retz.access.key = deadbeef
 retz.access.secret = cafebabe
 retz.schedule.results = file://path/to/dir/
