Add non-Mesos mode for smoke tests that does not need Mesos
Use this with '--mode local' argument.

--- a/build.gradle
+++ b/build.gradle
@@ -184,7 +184,7 @@ project(':retz-server') {
         }
     }
 
-    mainClassName = 'io.github.retz.scheduler.MesosFrameworkLauncher'
+    mainClassName = 'io.github.retz.scheduler.Launcher'
 
     shadowJar {
         dependsOn 'copyExecutorJar'
