--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,7 @@ subprojects {
         ext.year = '2016'
         ext.name = 'Nautilus Technologies, Inc.'
 
-        exclude "**/*.json"
+        excludes(["**/*.json", "**/*.jks"])
     }
 }
 
