--- a/build.gradle
+++ b/build.gradle
@@ -226,13 +226,14 @@ project(':retz-client') {
     dependencies {
         compile project(":retz-common")
         compile 'org.slf4j:slf4j-api:1.7.21'
+        compile 'org.slf4j:slf4j-simple:1.7.21'
+
         compile "com.beust:jcommander:1.48"
 
         //compile 'commons-cli:commons-cli:1.3.1'
         compile 'commons-io:commons-io:2.5'
         compile 'org.eclipse.jetty.websocket:websocket-client:9.3.2.v20150730'
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.7.4'
-        compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.7'
     }
 
     run {
