--- a/build.gradle
+++ b/build.gradle
@@ -133,6 +133,8 @@ project(':retz-server') {
         compile 'org.apache.commons:commons-lang3:3.0'
         compile 'commons-cli:commons-cli:1.3.1'
 
+        compile group: 'com.j256.simplejmx', name: 'simplejmx', version: '1.12'
+
         compile 'org.apache.mesos:mesos:1.0.1'
 
         compile 'com.sparkjava:spark-core:2.3'
