--- a/build.gradle
+++ b/build.gradle
@@ -81,26 +81,7 @@ project(':retz-common') {
     }
 }
 
-project(':retz-executor') {
-    apply plugin: 'application'
-    apply plugin: "com.github.johnrengelman.shadow"
-
-    dependencies {
-        compile project(":retz-common")
-        compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.7'
-
-        compile 'org.apache.mesos:mesos:1.0.1'
-        compile 'commons-io:commons-io:2.5'
-        compile 'org.apache.commons:commons-compress:1.12'
-        compile 'org.xerial:jnuma:0.1.3'
-
-        testCompile 'com.sparkjava:spark-core:2.5'
-    }
-
-    mainClassName = 'io.github.retz.executor.MesosExecutorLauncher'
-}
-
-def makePropertyFile(jarFileName, basedir, testType, name, version) {
+def makePropertyFile(basedir, testType, name, version) {
     // A kludge workaround for clean build which don't have build/resources/main
     // where property file creation fails
     def subdir = new File(basedir, "/resources/${testType}")
@@ -111,7 +92,6 @@ def makePropertyFile(jarFileName, basedir, testType, name, version) {
     // Bundle correctly corresponding file name; See RetzScheduler.setJarUri
     def prop = new Properties()
     def propFile = new File("${basedir}/resources/${testType}/retz-server.properties")
-    prop.setProperty("jarfilename", jarFileName)
     prop.setProperty("servername", serverName)
     propFile.createNewFile()
     prop.store(propFile.newWriter(), null)
@@ -160,59 +140,27 @@ project(':retz-server') {
         compile 'com.h2database:h2:1.4.+'
 
         testCompile project(":retz-client")
-    }
 
-    task copyExecutorJar(type: Copy, dependsOn: ':retz-executor:shadowJar') {
-        from project(":retz-executor").shadowJar.archivePath
-        into "${buildDir}/public"
+        // For local executor
+        compile 'org.apache.commons:commons-compress:1.12'
+        compile 'org.xerial:jnuma:0.1.3'
     }
-    task copyExecutorJar2(type: Copy, dependsOn: ':retz-executor:shadowJar') {
-        from project(":retz-executor").shadowJar.archivePath
-        into "${buildDir}/resources/main/public"
-    }
-
-    jar {
-        dependsOn 'copyExecutorJar'
-        // maybe cleaner than custom properties file? hmm, indifferent
-        // jar.manifest {
-        //     attributes 'ExecutorJarFile': project(":retz-executor").shadowJar.archiveName
-        // }
-        doLast {
-            exec {
-                executable "jar"
-                args "-uf", jar.archivePath, "-C", "$buildDir", "public"
-            }
-        }
-    }
-
-    def executorJarFile = project(":retz-executor").shadowJar.archiveName
 
     task processResources.doLast {
-        makePropertyFile(executorJarFile, "${buildDir}", "main", project.name, project.version)
+        makePropertyFile("${buildDir}", "main", project.name, project.version)
     }
 
     task processTestResources.doLast {
-        makePropertyFile(executorJarFile, "${buildDir}", "test", project.name, project.version)
+        makePropertyFile("${buildDir}", "test", project.name, project.version)
     }
 
     run {
-        dependsOn 'copyExecutorJar2' // TODO: eliminate this kludge
         if (project.hasProperty('args')) {
             args project.args.split('\\s+')
         }
     }
 
     mainClassName = 'io.github.retz.scheduler.Launcher'
-
-    shadowJar {
-        dependsOn 'copyExecutorJar'
-        doLast {
-            exec {
-                executable "jar"
-                args "-uf", shadowJar.archivePath, "-C", "${buildDir}", "public"
-            }
-        }
-    }
 
     ospackage {
         os = LINUX
