--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,8 @@ buildscript {
 
 def gitVersion() {
     def versionText = [
-        "sh",  "-c",
-        "cd ${project.rootDir} ; git describe --always --tag"].execute().in.text.trim()
+            "sh", "-c",
+            "cd ${project.rootDir} ; git describe --always --tag"].execute().in.text.trim()
     versionText
 }
 
@@ -111,7 +111,6 @@ def makeClientPropertyFile(basedir, testType, name, version) {
     propFile.createNewFile()
     prop.store(propFile.newWriter(), null)
 }
-
 
 
 project(':retz-server') {
@@ -233,10 +232,41 @@ project(':retz-client') {
     }
 }
 
+project('retz-admin') {
+    apply plugin: 'java'
+    apply plugin: 'application'
+    apply plugin: 'nebula.ospackage-application'
+    apply plugin: "com.github.johnrengelman.shadow"
+
+    dependencies {
+        compile project(":retz-common")
+
+        testCompile group: 'junit', name: 'junit', version: '4.11'
+
+        compile 'org.slf4j:slf4j-api:1.7.21'
+        compile 'org.slf4j:slf4j-simple:1.7.21'
+        compile group: 'com.j256.simplejmx', name: 'simplejmx', version: '1.13'
+        compile "com.beust:jcommander:1.48"
+
+    }
+
+    mainClassName = 'io.github.retz.admin.Launcher'
+
+    ospackage {
+        os = LINUX
+        user = 'root' // https://github.com/nebula-plugins/gradle-ospackage-plugin/issues/13
+    }
+    buildRpm {
+        release = '1.el7'
+        arch = 'X86_64'
+    }
+    buildDeb {
+        arch = 'AMD64'
+    }
+}
 project('retz-inttest') {
     dependencies {
         testCompile project(":retz-client")
-        testCompile project(":retz-admin")
         testCompile 'com.github.docker-java:docker-java:3.0.0'
     }
 
@@ -250,7 +280,12 @@ project('retz-inttest') {
         into "${buildDir}/libs/"
         rename(/(retz-client)-.+-(all)/, '$1-$2')
     }
-    task copy(dependsOn: ['copyServerJar', 'copyClientJar'])
+    task copyAdminJar(type: Copy, dependsOn: ':retz-admin:shadowJar') {
+        from project(":retz-admin").shadowJar.archivePath
+        into "${buildDir}/libs/"
+        rename(/(retz-admin)-.+-(all)/, '$1-$2')
+    }
+    task copy(dependsOn: ['copyServerJar', 'copyClientJar', 'copyAdminJar'])
 
     task buildDocker {
         doLast {
