Split client and server configurations from common.FileConfiguration

--- a/retz-client/src/test/resources/retz.properties
+++ b/retz-client/src/test/resources/retz.properties
@@ -15,13 +15,8 @@
 #    limitations under the License.
 #
 
-retz.mesos = 192.168.100.128:5050
-retz.bind  = http://localhost:9090
-retz.queue.max = 65536
+retz.server.uri  = http://localhost:9090
 retz.authentication = true
 retz.access.key = deadbeef
 retz.access.secret = cafebabe
-retz.schedule.results = file://path/to/dir/
-retz.schedule.retry = 5
-retz.user = kuenishi
 
