--- a/retz-inttest/src/test/resources/retz-client.properties
+++ b/retz-inttest/src/test/resources/retz-client.properties
@@ -1,4 +1,4 @@
-#
+retz.properties#
 #    Retz
 #    Copyright (C) 2016 Nautilus Technologies, Inc.
 #
@@ -15,17 +15,7 @@
 #    limitations under the License.
 #
 
-retz.mesos = localhost:5050
-retz.mesos.principal = retz
-retz.bind  = http://localhost:9090
-retz.queue.max = 65536
+retz.server.uri = http://127.0.0.1:19090
 retz.authentication = true
-retz.max.stock = 0
 retz.access.key = deadbeef
 retz.access.secret = cafebabe
-retz.schedule.results = file://path/to/dir/
-retz.schedule.retry = 5
-
-retz.tls.keystore.file = path/to/keystore.jsk
-retz.tls.keystore.pass = foobar
-retz.tls.insecure = true
