--- a/retz-server/src/test/resources/retz-tls-client.properties
+++ b/retz-server/src/test/resources/retz-tls-client.properties
@@ -15,17 +15,10 @@
 #    limitations under the License.
 #
 
-retz.mesos = localhost:5050
-retz.mesos.principal = retz
-retz.bind  = http://localhost:9090
-retz.queue.max = 65536
+retz.server.uri  = https://localhost:9091
+retz.tls.keystore.file = src/test/resources/retz-dev.jks
+retz.tls.keystore.pass = retz-dev
+retz.tls.insecure = true
 retz.authentication = true
-retz.max.stock = 0
 retz.access.key = deadbeef
 retz.access.secret = cafebabe
-retz.schedule.results = file://path/to/dir/
-retz.schedule.retry = 5
-
-retz.tls.keystore.file = path/to/keystore.jsk
-retz.tls.keystore.pass = foobar
-retz.tls.insecure = true
