Fix tests broken by 987792

--- a/retz-server/src/test/resources/retz-tls.properties
+++ b/retz-server/src/test/resources/retz-tls.properties
@@ -15,7 +15,7 @@
 #    limitations under the License.
 #
 
-retz.mesos = localhost:5050
+retz.mesos = example.com:5050
 retz.mesos.principal = retz
 retz.bind  = https://localhost:9091
 retz.queue.max = 65536
