--- a/retz-server/src/test/resources/retz.properties
+++ b/retz-server/src/test/resources/retz.properties
@@ -15,7 +15,7 @@
 #    limitations under the License.
 #
 
-retz.mesos = localhost:5050
+retz.mesos = mesos.example.com:5050
 retz.mesos.principal = retz
 retz.bind  = http://localhost:9090
 retz.queue.max = 65536
