--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ subprojects {
 
     group = 'io.github.retz'
     // Note: You can't create RPM with hyphen included in version name
-    version = '0.0.32-SNAPSHOT'
+    version = '0.0.32'
     sourceCompatibility = '1.8'
     targetCompatibility = '1.8'
     repositories {
