--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         jcenter()
     }
     dependencies {
+        classpath 'com.gradle:build-scan-plugin:1.3'
         classpath "com.github.jengelman.gradle.plugins:shadow:1.2.3"
         classpath 'com.netflix.nebula:gradle-ospackage-plugin:3.+'
         classpath "gradle.plugin.nl.javadude.gradle.plugins:license-gradle-plugin:0.13.1"
@@ -20,6 +21,7 @@ def gitVersion() {
     versionText
 }
 
+apply plugin: 'com.gradle.build-scan'
 apply plugin: 'nebula-aggregate-javadocs'
 
 subprojects {
@@ -335,4 +337,10 @@ project('retz-inttest') {
 task wrapper(type: Wrapper) {
     gradleVersion = '3.2.1'
     distributionUrl = distributionUrl.replace("bin", "all")
+}
+
+buildScan {
+    licenseAgreementUrl = 'https://gradle.com/terms-of-service'
+    licenseAgree = 'yes'
+    link 'GitHub', 'https://github.com/retz/retz'
 }
