Update Dockerfile of inttest

--- a/retz-inttest/src/test/resources/docker/Dockerfile
+++ b/retz-inttest/src/test/resources/docker/Dockerfile
@@ -8,13 +8,12 @@ RUN yum -y install iproute httpd
 RUN yum -y install systemd; yum clean all
 
 # Retz dependencies
-RUN yum install -y hwloc hwloc-lib numactl numactl-libs
 RUN yum install -y java-1.8.0-openjdk
 
 RUN yum -y install epel-release
 
 RUN yum -y install http://repos.mesosphere.com/el/7/noarch/RPMS/mesosphere-el-repo-7-2.noarch.rpm
-RUN yum -y install mesos mesosphere-el-repo mesosphere-zookeeper marathon
+RUN yum -y install mesos mesosphere-el-repo mesosphere-zookeeper
 
 # cf. Running systemd within a Docker Container – Red Hat Developer Blog
 #   http://developers.redhat.com/blog/2014/05/05/running-systemd-within-docker-container/
