--- a/build.gradle
+++ b/build.gradle
@@ -226,6 +226,7 @@ project(':retz-client') {
 
         compile "com.beust:jcommander:1.58"
         compile 'commons-io:commons-io:2.5'
+        compile 'io.github.openfeign:feign-jackson:9.4.0'
     }
 
 
