Add bunch of tiny tests

--- a/retz-common/src/test/resources/retz.properties
+++ b/retz-common/src/test/resources/retz.properties
@@ -23,3 +23,5 @@ retz.access.secret = deadbeef
 retz.tls.keystore.file = path/to/keystore.jsk
 retz.tls.keystore.pass = foobar
 retz.tls.insecure = true
+
+retz.jmx.port = 40822
