--- a/retz-server/src/test/resources/retz.properties
+++ b/retz-server/src/test/resources/retz.properties
@@ -29,3 +29,5 @@ retz.schedule.retry = 5
 retz.tls.keystore.file = path/to/keystore.jsk
 retz.tls.keystore.pass = foobar
 retz.tls.insecure = true
+
+retz.mesos.refuse = 7
