--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ subprojects {
 
     group = 'io.github.retz'
     // Note: You can't create RPM with hyphen included in version name
-    version = '0.0.35-SNAPSHOT'
+    version = '0.1.0-SNAPSHOT'
     sourceCompatibility = '1.8'
     targetCompatibility = '1.8'
     repositories {
@@ -135,21 +135,19 @@ project(':retz-server') {
         compile 'commons-cli:commons-cli:1.3.1'
         compile 'commons-io:commons-io:2.5'
 
-        compile group: 'com.j256.simplejmx', name: 'simplejmx', version: '1.12'
+        compile group: 'com.j256.simplejmx', name: 'simplejmx', version: '1.13'
 
         compile 'org.apache.mesos:mesos:1.1.0'
 
+        // TODO: 2.5.3 is the latest - though, with 2.5.3 test cycle will need huge change
         compile 'com.sparkjava:spark-core:2.3'
-        compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.7.4'
+        compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.5'
 
         compile 'com.h2database:h2:1.4.+'
         compile group: 'org.postgresql', name: 'postgresql', version: '9.4.+'
         compile group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: '8.5.+'
 
         testCompile project(":retz-client")
-
-        // For local executor
-        compile 'org.apache.commons:commons-compress:1.12'
     }
 
     test {
@@ -211,7 +209,7 @@ project(':retz-client') {
         compile 'org.slf4j:slf4j-api:1.7.21'
         compile 'org.slf4j:slf4j-simple:1.7.21'
 
-        compile "com.beust:jcommander:1.48"
+        compile "com.beust:jcommander:1.58"
         compile 'commons-io:commons-io:2.5'
     }
 
@@ -259,7 +257,7 @@ project('retz-admin') {
         compile 'org.slf4j:slf4j-api:1.7.21'
         compile 'org.slf4j:slf4j-simple:1.7.21'
         compile group: 'com.j256.simplejmx', name: 'simplejmx', version: '1.13'
-        compile "com.beust:jcommander:1.48"
+        compile "com.beust:jcommander:1.58"
     }
 
     mainClassName = 'io.github.retz.admin.Launcher'
@@ -279,7 +277,7 @@ project('retz-admin') {
 project('retz-inttest') {
     dependencies {
         testCompile project(":retz-client")
-        testCompile 'com.github.docker-java:docker-java:3.0.0'
+        testCompile 'com.github.docker-java:docker-java:3.0.6'
     }
 
     task copyServerJar(type: Copy, dependsOn: ':retz-server:shadowJar') {
