--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ subprojects {
 
     group = 'io.github.retz'
     // Note: You can't create RPM with hyphen included in version name
-    version = '0.1.0'
+    version = '0.1.1-SNAPSHOT'
     sourceCompatibility = '1.8'
     targetCompatibility = '1.8'
     repositories {
