--- a/build.gradle
+++ b/build.gradle
@@ -160,6 +160,7 @@ project(':retz-server') {
         compile group: 'com.j256.simplejmx', name: 'simplejmx', version: '1.13'
 
         compile 'org.apache.mesos:mesos:1.1.0'
+        compile 'io.github.openfeign:feign-jackson:9.4.0'
 
         compile 'com.sparkjava:spark-core:2.5.3'
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.5'
