--- a/retz-server/src/test/resources/retz-tls.properties
+++ b/retz-server/src/test/resources/retz-tls.properties
@@ -28,3 +28,6 @@ retz.max.stock = 0
 retz.authentication = true
 retz.access.key = deadbeef
 retz.access.secret = cafebabe
+
+## Prevent table not found exception
+retz.gc = false
