Add proper dependency

--- a/build.gradle
+++ b/build.gradle
@@ -107,6 +107,9 @@ project(':retz-common') {
     dependencies {
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.+'
         compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jdk8', version: '2.+'
+
+        compile 'org.slf4j:slf4j-api:1.7.21'
+        testCompile 'org.slf4j:slf4j-simple:1.7.21'
     }
 }
 
