--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ subprojects {
 
     group = 'io.github.retz'
     // Note: You can't create RPM with hyphen included in version name
-    version = '0.2.0-SNAPSHOT'
+    version = '0.2.0'
     sourceCompatibility = '1.8'
     targetCompatibility = '1.8'
 
