Introduce limit to number of jobs fetched by client

--- a/retz-server/src/test/resources/retz.properties
+++ b/retz-server/src/test/resources/retz.properties
@@ -26,6 +26,8 @@ retz.access.secret = cafebabe
 retz.schedule.results = file://path/to/dir/
 retz.schedule.retry = 5
 
+retz.max.list-jobs = 42
+
 retz.tls.keystore.file = path/to/keystore.jsk
 retz.tls.keystore.pass = foobar
 retz.tls.insecure = true
