In case a test machine is using Docker on OverlayFS

--- a/retz-inttest/src/test/resources/docker/Dockerfile
+++ b/retz-inttest/src/test/resources/docker/Dockerfile
@@ -2,6 +2,10 @@ FROM centos:7.2.1511
 
 ENV container docker
 
+## https://docs.docker.com/engine/userguide/storagedriver/overlayfs-driver/
+## Handling the OverlayFS’s aspect which is incompatible with other filesystems:
+RUN yum -y install yum-plugin-ovl
+
 RUN yum -y install iproute httpd
 
 # SystemD, or cgroups, is necessary for mesos-slave, mesos-master does not need it.
