--- a/retz-inttest/src/test/resources/retz.properties
+++ b/retz-inttest/src/test/resources/retz.properties
@@ -23,3 +23,5 @@ retz.access.key = deadbeef
 retz.access.secret = cafebabe
 retz.schedule.results = file://path/to/dir/
 retz.schedule.retry = 5
+
+retz.planner.name = naive2
