Add build configuration for deploying maven repository

--- a/build.gradle
+++ b/build.gradle
@@ -48,12 +48,17 @@ subprojects {
     apply plugin: 'scala'
     apply plugin: 'eclipse'
     apply plugin: 'findbugs'
+    apply plugin: 'maven'
 
     group = 'io.github.retz'
     // Note: You can't create RPM with hyphen included in version name
     version = '0.2.5-SNAPSHOT'
     sourceCompatibility = '1.8'
     targetCompatibility = '1.8'
+
+    configurations {
+        deployerJars
+    }
 
     dependencies {
         compile 'org.slf4j:slf4j-api:1.7.21'
@@ -64,6 +69,8 @@ subprojects {
         testCompile 'org.scalacheck:scalacheck_2.11:1.13.+'
         testCompile 'org.scalatest:scalatest_2.11:3.0.+'
         testCompile 'org.scala-lang:scala-library:2.11.+'
+
+        deployerJars 'org.springframework.build:aws-maven:5.0.0.RELEASE'
     }
 
     jar {
@@ -99,6 +106,16 @@ subprojects {
             xml.enabled = true
             csv.enabled = false
             html.destination "${buildDir}/reports/jacoco"
+        }
+    }
+
+    uploadArchives {
+        repositories {
+            mavenDeployer {
+                configuration = project.configurations.deployerJars
+                repository id: 'io.github.retz.releases', url: 's3://retz-maven/releases'
+                snapshotRepository id: 'io.github.retz.snapshots', url: 's3://retz-maven/snapshots'
+            }
         }
     }
 }
