Add attributes file to inttest
Signed-off-by: UENISHI Kota <uenishi@nautilus-technologies.com>

--- a/retz-inttest/src/test/resources/docker/Dockerfile
+++ b/retz-inttest/src/test/resources/docker/Dockerfile
@@ -48,6 +48,7 @@ COPY echo.sh /usr/bin/echo.sh
 # COPY mesos-slave_isolation /etc/mesos-slave/isolation
 # COPY cgroups_enable_cfs /etc/mesos-slave/cgroups_enable_cfs
 COPY mesos-master_default /etc/default/mesos-master
+COPY attributes /etc/mesos-slave/attributes
 
 # Copy retz.properties file here, because it will be rewritten by the
 # above spawn script for IP address setting.
