--- a/retz-inttest/src/test/resources/docker/retz-postgres.properties
+++ b/retz-inttest/src/test/resources/docker/retz-postgres.properties
@@ -62,7 +62,7 @@ retz.database.user = retz
 ## retz.tls.insecure = false
 
 ## Choose Planner from one of {naive, priority}
-retz.planner.name = naive
+retz.planner.name = fifo
 
 ## JMX Port, shared by retz-server and retz-admin
 ## retz.jmx.port = 9999
