Add build configurations for CircleCI

--- a/build.gradle
+++ b/build.gradle
@@ -118,6 +118,12 @@ subprojects {
             }
         }
     }
+
+    task copyReport(type: Copy) {
+        from "build/test-results"
+          into "$rootDir/build/all-test-report"
+    }
+    test.finalizedBy(copyReport)
 }
 
 project(':retz-common') {
