Add max file size option

--- a/retz-server/src/test/resources/retz.properties
+++ b/retz-server/src/test/resources/retz.properties
@@ -27,6 +27,7 @@ retz.schedule.results = file://path/to/dir/
 retz.schedule.retry = 5
 
 retz.max.list-jobs = 42
+retz.max.file-size = 12345
 
 retz.tls.keystore.file = path/to/keystore.jsk
 retz.tls.keystore.pass = foobar
