--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,10 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.gradle:build-scan-plugin:1.3'
-        classpath "com.github.jengelman.gradle.plugins:shadow:1.2.3"
-        classpath 'com.netflix.nebula:gradle-ospackage-plugin:3.+'
-        classpath "gradle.plugin.nl.javadude.gradle.plugins:license-gradle-plugin:0.13.1"
-        classpath 'com.netflix.nebula:gradle-aggregate-javadocs-plugin:2.2.+'
+        classpath 'com.gradle:build-scan-plugin:1.8'
+        classpath "com.github.jengelman.gradle.plugins:shadow:2.0.1"
+        classpath 'com.netflix.nebula:gradle-ospackage-plugin:4.4.+'
+        classpath "gradle.plugin.nl.javadude.gradle.plugins:license-gradle-plugin:0.14.0"
     }
 }
 
@@ -22,7 +21,6 @@ def gitVersion() {
 }
 
 apply plugin: 'com.gradle.build-scan'
-apply plugin: 'nebula-aggregate-javadocs'
 
 allprojects {
     apply plugin: 'java'
@@ -61,14 +59,14 @@ subprojects {
     }
 
     dependencies {
-        compile 'org.slf4j:slf4j-api:1.7.21'
+        compile 'org.slf4j:slf4j-api:1.7.25'
 
         testCompile 'junit:junit:4.12'
         testCompile 'org.hamcrest:hamcrest-library:1.3'
 
-        testCompile 'org.scalacheck:scalacheck_2.11:1.13.+'
-        testCompile 'org.scalatest:scalatest_2.11:3.0.+'
-        testCompile 'org.scala-lang:scala-library:2.11.+'
+        testCompile 'org.scalacheck:scalacheck_2.12:1.13.+'
+        testCompile 'org.scalatest:scalatest_2.12:3.0.+'
+        testCompile 'org.scala-lang:scala-library:2.12.+'
 
         deployerJars 'org.springframework.build:aws-maven:5.0.0.RELEASE'
     }
@@ -105,6 +103,7 @@ subprojects {
             html.enabled = true
             xml.enabled = true
             csv.enabled = false
+            // TODO: update this until Gradle 5.0
             html.destination "${buildDir}/reports/jacoco"
         }
     }
@@ -131,8 +130,8 @@ project(':retz-common') {
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.+'
         compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jdk8', version: '2.+'
 
-        compile 'org.slf4j:slf4j-api:1.7.21'
-        testCompile 'org.slf4j:slf4j-simple:1.7.21'
+        compile 'org.slf4j:slf4j-api:1.7.25'
+        testCompile 'org.slf4j:slf4j-simple:1.7.25'
     }
 }
 
@@ -172,7 +171,7 @@ project(':retz-planner-spi') {
 
     dependencies {
         compile project(":retz-common")
-        compile 'org.slf4j:slf4j-api:1.7.21'
+        compile 'org.slf4j:slf4j-api:1.7.25'
     }
 }
 project(':retz-server') {
@@ -185,21 +184,21 @@ project(':retz-server') {
         compile project(":retz-common")
         compile project(":retz-planner-spi")
 
-        compile 'org.slf4j:slf4j-api:1.7.21'
-        compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.7'
+        compile 'org.slf4j:slf4j-api:1.7.25'
+        compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
-        compile 'commons-cli:commons-cli:1.3.1'
+        compile 'commons-cli:commons-cli:1.4'
         compile 'commons-io:commons-io:2.5'
 
-        compile group: 'com.j256.simplejmx', name: 'simplejmx', version: '1.13'
+        compile group: 'com.j256.simplejmx', name: 'simplejmx', version: '1.15'
 
-        compile 'org.apache.mesos:mesos:1.1.0'
+        compile 'org.apache.mesos:mesos:1.3.0'
 
-        compile 'com.sparkjava:spark-core:2.5.3'
-        compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.5'
+        compile 'com.sparkjava:spark-core:2.6.0'
+        compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.9'
 
         compile 'com.h2database:h2:1.4.+'
-        compile group: 'org.postgresql', name: 'postgresql', version: '9.4.+'
+        compile group: 'org.postgresql', name: 'postgresql', version: '42.1.+'
         compile group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: '8.5.+'
 
         testCompile project(":retz-client")
@@ -255,13 +254,13 @@ project(':retz-client') {
 
     dependencies {
         compile project(":retz-common")
-        compile 'org.slf4j:slf4j-api:1.7.21'
-        compile 'org.slf4j:slf4j-simple:1.7.21'
+        compile 'org.slf4j:slf4j-api:1.7.25'
+        compile 'org.slf4j:slf4j-simple:1.7.25'
 
-        compile "com.beust:jcommander:1.58"
+        compile "com.beust:jcommander:1.72"
         compile 'commons-io:commons-io:2.5'
-        compile 'io.github.openfeign:feign-jackson:9.4.0'
-        compile 'io.github.openfeign:feign-slf4j:9.4.0'
+        compile 'io.github.openfeign:feign-jackson:9.5.0'
+        compile 'io.github.openfeign:feign-slf4j:9.5.0'
     }
 
 
@@ -310,12 +309,12 @@ project('retz-admin') {
     dependencies {
         compile project(":retz-common")
 
-        testCompile group: 'junit', name: 'junit', version: '4.11'
+        testCompile group: 'junit', name: 'junit', version: '4.12'
 
-        compile 'org.slf4j:slf4j-api:1.7.21'
-        compile 'org.slf4j:slf4j-simple:1.7.21'
-        compile group: 'com.j256.simplejmx', name: 'simplejmx', version: '1.13'
-        compile "com.beust:jcommander:1.58"
+        compile 'org.slf4j:slf4j-api:1.7.25'
+        compile 'org.slf4j:slf4j-simple:1.7.25'
+        compile group: 'com.j256.simplejmx', name: 'simplejmx', version: '1.15'
+        compile "com.beust:jcommander:1.72"
     }
 
     mainClassName = 'io.github.retz.admin.Launcher'
@@ -335,9 +334,9 @@ project('retz-admin') {
 project('retz-inttest') {
     dependencies {
         testCompile project(":retz-client")
-        testCompile 'com.github.docker-java:docker-java:3.0.6'
-        testCompile 'io.github.openfeign:feign-jackson:9.4.0'
-        testCompile 'io.github.openfeign:feign-slf4j:9.4.0'
+        testCompile 'com.github.docker-java:docker-java:3.0.10'
+        testCompile 'io.github.openfeign:feign-jackson:9.5.0'
+        testCompile 'io.github.openfeign:feign-slf4j:9.5.0'
     }
 
     task copyServerJar(type: Copy, dependsOn: ':retz-server:shadowJar') {
@@ -393,7 +392,7 @@ project('retz-inttest') {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '3.4.1'
+    gradleVersion = '4.0'
     distributionUrl = distributionUrl.replace("bin", "all")
 }
 
