--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ subprojects {
 
     group = 'io.github.retz'
     // Note: You can't create RPM with hyphen included in version name
-    version = '0.2.8-SNAPSHOT'
+    version = '0.2.8'
     sourceCompatibility = '1.8'
     targetCompatibility = '1.8'
 
