--- a/retz-inttest/src/test/resources/docker/retz-zk.properties
+++ b/retz-inttest/src/test/resources/docker/retz-zk.properties
@@ -15,8 +15,9 @@
 #    limitations under the License.
 #
 
-retz.mesos = 127.0.0.1:15050
-retz.bind  = http://127.0.0.1:19090
+retz.mesos = zk://127.0.0.1:2181/mesos
+retz.bind  = http://##IP##:19090
 retz.authentication = true
 retz.access.key = deadbeef
 retz.access.secret = cafebabe
+
